# e-commerce

./: .gitignore  pyproject.toml
conf/: settings.py
