[tool.poetry]
name = "e-commerce"
version = "0.1.0"
description = "An e-commerce project built with Django."
authors = ["Amir Hossein Moayedi <amir.h.moayedi@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
